--- a/src/components/sbb-map-container/sbb-map-container.scss
+++ b/src/components/sbb-map-container/sbb-map-container.scss
@@ -5,10 +5,13 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-map-container-map-height-tiny: #{sbb.px-to-rem-build(295)};
+  --sbb-map-container-map-height-zero: #{sbb.px-to-rem-build(295)};
   --sbb-map-container-map-height-small: #{sbb.px-to-rem-build(320)};
   --sbb-map-container-sidebar-width: #{sbb.px-to-rem-build(400)};
   --sbb-map-container-sidebar-background-color: var(--sbb-color-white-default);
+  --sbb-map-container-map-height: calc(
+    var(--sbb-map-container-map-height-zero) + var(--sbb-border-radius-4x)
+  );
 }
 
 .sbb-map-container {
@@ -27,6 +30,8 @@
 }
 
 .sbb-map-container__sidebar {
+  @include sbb.scrollbar;
+
   grid-column: 1 / 3;
   grid-row: 2 / 3;
   width: 100%;
@@ -50,16 +55,17 @@
 
 .sbb-map-container__map {
   position: sticky;
-  top: 0;
-  left: 0;
-  width: 100%;
+  inset-block-start: 0;
+  inset-inline: 0;
   z-index: 1;
   grid-row: 1 / 2;
   grid-column: 1 / 3;
-  height: calc(var(--sbb-map-container-map-height-tiny) + var(--sbb-border-radius-4x));
+  height: var(--sbb-map-container-map-height);
 
   @include sbb.mq($from: small) {
-    height: calc(var(--sbb-map-container-map-height-small) + var(--sbb-border-radius-4x));
+    --sbb-map-container-map-height: calc(
+      var(--sbb-map-container-map-height-small) + var(--sbb-border-radius-4x)
+    );
   }
 
   @include sbb.mq($from: medium) {
