--- a/src/components/sbb-train/sbb-train.scss
+++ b/src/components/sbb-train/sbb-train.scss
@@ -5,7 +5,6 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-train-sector-padding: var(--sbb-spacing-fixed-1x);
   --sbb-train-direction-spacing: var(--sbb-spacing-fixed-4x);
   --sbb-train-direction-label-padding: var(--sbb-spacing-fixed-1x);
   --sbb-train-direction-station-padding: var(--sbb-spacing-fixed-3x);
@@ -36,9 +35,11 @@
   height: 100%;
 }
 
-.sbb-train__sectors {
+.sbb-train__wagons {
+  @include sbb.list-reset;
+
   display: flex;
-  gap: var(--sbb-train-sector-padding);
+  gap: var(--sbb-train-formation-wagon-gap);
 }
 
 .sbb-train__direction {
@@ -48,7 +49,7 @@
   margin-block-end: var(--sbb-train-direction-spacing);
   display: flex;
   position: relative;
-  margin-top: auto;
+  margin-block-start: auto;
   width: 100%;
 }
 
@@ -70,8 +71,7 @@
   z-index: 0;
   position: absolute;
   top: calc(((0.5em * var(--sbb-typo-line-height-body-text))) + var(--sbb-train-direction-spacing));
-  left: 0;
-  right: 0;
+  inset-inline: 0;
   height: var(--sbb-train-direction-line-width);
   background-color: var(--sbb-train-direction-line-color);
 }
@@ -120,9 +120,14 @@
 }
 
 .sbb-train__direction-station {
+  @include sbb.text-xxs--regular;
+
   max-width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
   padding: 0 var(--sbb-train-direction-station-padding);
-  @include sbb.text-xxs--regular;
+}
+
+.sbb-screenreaderonly {
+  @include sbb.screen-reader-only;
 }
