--- a/src/global/styles/mixins/scrollbar.scss
+++ b/src/global/styles/mixins/scrollbar.scss
@@ -1,6 +1,6 @@
 @use '../core/functions';
 
-@mixin scrollbar {
+@mixin scrollbar-rules {
   --sbb-scrollbar-width: var(--sbb-spacing-fixed-4x);
 
   &::-webkit-scrollbar {
@@ -32,73 +32,73 @@
   }
 
   /* Styles for Firefox */
-  scrollbar-width: var(--sbb-scrollbar-firefox-width);
+  scrollbar-width: var(--sbb-scrollbar-width-firefox);
   scrollbar-color: var(--sbb-scrollbar-color, currentcolor) transparent;
 }
 
 @mixin scrollbar-variables--size-thin {
   --sbb-scrollbar-thumb-width: #{functions.px-to-rem-build(2)};
   --sbb-scrollbar-thumb-width-hover: #{functions.px-to-rem-build(4)};
-  --sbb-scrollbar-firefox-width: thin;
+  --sbb-scrollbar-width-firefox: thin;
 }
 
 @mixin scrollbar-variables--size-thick {
   --sbb-scrollbar-thumb-width: #{functions.px-to-rem-build(8)};
   --sbb-scrollbar-thumb-width-hover: var(--sbb-scrollbar-thumb-width);
-  --sbb-scrollbar-firefox-width: auto;
+  --sbb-scrollbar-width-firefox: auto;
 }
 
-@mixin scrollbar-variables--color-dark {
-  --sbb-scrollbar-color: var(--sbb-color-white-alpha-30);
-  --sbb-scrollbar-color-hover: var(--sbb-color-white-alpha-60);
-}
-
-@mixin scrollbar-variables--color-light {
+@mixin scrollbar-variables--color-positive {
   --sbb-scrollbar-color: var(--sbb-color-black-alpha-30);
   --sbb-scrollbar-color-hover: var(--sbb-color-black-alpha-60);
 }
 
-@mixin scrollbar-variables--color-light-thick {
+@mixin scrollbar-variables--color-negative {
+  --sbb-scrollbar-color: var(--sbb-color-white-alpha-30);
+  --sbb-scrollbar-color-hover: var(--sbb-color-white-alpha-60);
+}
+
+@mixin scrollbar-variables--color-thick-positive {
   --sbb-scrollbar-color: var(--sbb-color-cement-default);
   --sbb-scrollbar-color-hover: var(--sbb-color-metal-default);
 }
 
-@mixin scrollbar-variables-light {
+@mixin scrollbar-variables {
   @include scrollbar-variables--size-thin;
-  @include scrollbar-variables--color-light;
+  @include scrollbar-variables--color-positive;
 }
 
-@mixin scrollbar-variables-dark {
+@mixin scrollbar-variables-negative {
   @include scrollbar-variables--size-thin;
-  @include scrollbar-variables--color-dark;
+  @include scrollbar-variables--color-negative;
 }
 
-@mixin scrollbar-variables-dark-thick {
+@mixin scrollbar-variables-thick {
   @include scrollbar-variables--size-thick;
-  @include scrollbar-variables--color-dark;
+  @include scrollbar-variables--color-thick-positive;
 }
 
-@mixin scrollbar-variables-light-thick {
+@mixin scrollbar-variables-negative-thick {
   @include scrollbar-variables--size-thick;
-  @include scrollbar-variables--color-light-thick;
+  @include scrollbar-variables--color-negative;
 }
 
-@mixin scrollbar-dark {
-  @include scrollbar-variables-dark;
-  @include scrollbar;
+@mixin scrollbar {
+  @include scrollbar-variables;
+  @include scrollbar-rules;
 }
 
-@mixin scrollbar-light {
-  @include scrollbar-variables-light;
-  @include scrollbar;
+@mixin scrollbar-negative {
+  @include scrollbar-variables-negative;
+  @include scrollbar-rules;
 }
 
-@mixin scrollbar-dark-thick {
-  @include scrollbar-variables-dark-thick;
-  @include scrollbar;
+@mixin scrollbar-thick {
+  @include scrollbar-variables-thick;
+  @include scrollbar-rules;
 }
 
-@mixin scrollbar-light-thick {
-  @include scrollbar-variables-light-thick;
-  @include scrollbar;
+@mixin scrollbar-thick-negative {
+  @include scrollbar-variables-negative-thick;
+  @include scrollbar-rules;
 }
