--- a/src/storybook/styles/scrollbar/scrollbar-internal.scss
+++ b/src/storybook/styles/scrollbar/scrollbar-internal.scss
@@ -5,19 +5,34 @@
 }
 
 .scrollbar-negative {
-  @include sbb.scrollbar-negative;
+  @include sbb.scrollbar($negative: true);
 }
 
 .scrollbar-thick {
-  @include sbb.scrollbar-thick;
+  @include sbb.scrollbar($size: thick);
 }
 
 .scrollbar-thick-negative {
-  @include sbb.scrollbar-thick-negative;
+  @include sbb.scrollbar($size: thick, $negative: true);
 }
 
-.scrollbar-negative,
-.scrollbar-thick-negative {
+.scrollbar-track-visible {
+  @include sbb.scrollbar($track-visible: true);
+}
+
+.scrollbar-negative-track-visible {
+  @include sbb.scrollbar($negative: true, $track-visible: true);
+}
+
+.scrollbar-thick-track-visible {
+  @include sbb.scrollbar($size: thick, $track-visible: true);
+}
+
+.scrollbar-thick-negative-track-visible {
+  @include sbb.scrollbar($size: thick, $negative: true, $track-visible: true);
+}
+
+.negative {
   background-color: var(--sbb-color-charcoal-default);
   color: var(--sbb-color-white-default);
 }
