--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -55,6 +55,22 @@
   }
 }
 
+:host([data-is-selection-panel-input]:focus-visible) .sbb-checkbox__inner::before {
+  content: '';
+  position: absolute;
+  display: block;
+  inset-block: calc(
+    (var(--sbb-spacing-responsive-xs) * -1) + var(--sbb-focus-outline-width) -
+      (var(--sbb-focus-outline-offset) * 2)
+  );
+  inset-inline: calc(
+    (var(--sbb-spacing-responsive-xxs) * -1) + var(--sbb-focus-outline-width) -
+      (var(--sbb-focus-outline-offset) * 2)
+  );
+  border: var(--sbb-focus-outline-color) solid var(--sbb-focus-outline-width);
+  border-radius: #{sbb.px-to-rem-build(10)};
+}
+
 slot[name='subtext'] {
   display: block;
   color: var(--sbb-checkbox-subtext-color);
@@ -67,7 +83,14 @@ slot[name='subtext'] {
   @include sbb.zero-width-space;
 
   // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
-  :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
+  :host(
+      :focus-visible:not(
+          [data-focus-origin='mouse'],
+          [data-focus-origin='touch'],
+          [data-is-selection-panel-input]
+        )
+    )
+    & {
     @include sbb.focus-outline;
 
     border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
@@ -171,32 +194,6 @@ input[type='checkbox'] {
   :host([icon-placement='end']) & {
     justify-content: flex-start;
     flex-grow: 1;
-  }
-}
-
-input[type='checkbox']:focus-visible + .sbb-checkbox__inner {
-  :host(:not([data-is-selection-panel-input])) & {
-    @include sbb.focus-outline;
-
-    border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
-  }
-
-  :host([data-is-selection-panel-input]) & {
-    &::before {
-      content: '';
-      position: absolute;
-      display: block;
-      inset-block: calc(
-        (var(--sbb-spacing-responsive-xs) * -1) + var(--sbb-focus-outline-width) -
-          (var(--sbb-focus-outline-offset) * 2)
-      );
-      inset-inline: calc(
-        (var(--sbb-spacing-responsive-xxs) * -1) + var(--sbb-focus-outline-width) -
-          (var(--sbb-focus-outline-offset) * 2)
-      );
-      border: var(--sbb-focus-outline-color) solid var(--sbb-focus-outline-width);
-      border-radius: #{sbb.px-to-rem-build(10)};
-    }
   }
 }
 
