--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -22,12 +22,6 @@
   outline: none !important;
 }
 
-:host(:focus-visible:not([data-is-selection-panel-input])) {
-  @include sbb.focus-outline;
-
-  border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
-}
-
 :host(:focus-visible[data-is-selection-panel-input]) {
   // Use !important here to not interfere with Firefox focus ring definition
   // which appears in normalize css of several frameworks.
@@ -81,7 +75,14 @@
   }
 
   // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
-  :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
+  :host(
+      :focus-visible:not(
+          [data-focus-origin='mouse'],
+          [data-focus-origin='touch'],
+          [data-is-selection-panel-input]
+        )
+    )
+    & {
     @include sbb.focus-outline;
 
     border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
