refactor: 00000 sbb-map-container implementation
- added scroll up functionality
- replace visibil class selector with data selector

--- a/src/components/sbb-map-container/sbb-map-container.scss
+++ b/src/components/sbb-map-container/sbb-map-container.scss
@@ -38,12 +38,14 @@
   transition: opacity var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
   opacity: 0;
 
-  &.visible {
-    opacity: 1;
-  }
-
   @include sbb.mq($from: medium) {
     display: none;
+  }
+}
+
+:host([data-return-button-visible='true']) {
+  .sbb-map-container__sidebar-button {
+    opacity: 1;
   }
 }
 
