--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -101,34 +101,27 @@
   --sbb-button-color-hover-text: var(--sbb-color-milk-default);
 }
 
-:host([variant='translucent']) {
-  --sbb-button-color-active-background: var(--sbb-color-black-alpha-70);
-  --sbb-button-color-active-border: var(--sbb-color-black-alpha-0);
+:host([variant='tertiary']) {
+  --sbb-button-color-active-background: var(--sbb-color-black-default);
+  --sbb-button-color-active-border: var(--sbb-color-cloud-default);
   --sbb-button-color-active-text: var(--sbb-color-cloud-default);
-  --sbb-button-color-default-background: var(--sbb-color-black-alpha-50);
-  --sbb-button-color-default-border: var(--sbb-color-black-alpha-0);
+  --sbb-button-color-default-background: var(--sbb-color-charcoal-default);
+  --sbb-button-color-default-border: var(--sbb-color-cloud-default);
   --sbb-button-color-default-text: var(--sbb-color-white-default);
-  --sbb-button-color-disabled-background: var(--sbb-color-black-alpha-20);
-  --sbb-button-color-disabled-border: var(--sbb-color-black-alpha-0);
-  --sbb-button-color-disabled-text: var(--sbb-color-milk-default);
-  --sbb-button-color-hover-background: var(--sbb-color-black-alpha-60);
-  --sbb-button-color-hover-border: var(--sbb-color-black-alpha-0);
+  --sbb-button-color-disabled-background: var(--sbb-color-milk-default);
+  --sbb-button-color-disabled-border: var(--sbb-color-milk-default);
+  --sbb-button-color-disabled-text: var(--sbb-color-platinum-default);
+  --sbb-button-color-hover-background: var(--sbb-color-midnight-default);
+  --sbb-button-color-hover-border: var(--sbb-color-cloud-default);
   --sbb-button-color-hover-text: var(--sbb-color-milk-default);
+  --sbb-button-shadow-1-color: var(--sbb-color-platinum-alpha-20);
+  --sbb-button-shadow-2-color: var(--sbb-color-cement-alpha-20);
 }
 
-:host([variant='translucent'][negative]:not([negative='false'])) {
-  --sbb-button-color-active-background: var(--sbb-color-white-alpha-70);
-  --sbb-button-color-active-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-active-text: var(--sbb-color-anthracite-default);
-  --sbb-button-color-default-background: var(--sbb-color-white-alpha-50);
-  --sbb-button-color-default-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-default-text: var(--sbb-color-charcoal-default);
-  --sbb-button-color-disabled-background: var(--sbb-color-white-alpha-20);
-  --sbb-button-color-disabled-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-disabled-text: var(--sbb-color-platinum-default);
-  --sbb-button-color-hover-background: var(--sbb-color-white-alpha-60);
-  --sbb-button-color-hover-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-hover-text: var(--sbb-color-iron-default);
+:host([variant='tertiary'][negative]:not([negative='false'])) {
+  --sbb-button-color-disabled-background: var(--sbb-color-black-alpha-10);
+  --sbb-button-color-disabled-border: var(--sbb-color-black-alpha-0);
+  --sbb-button-color-disabled-text: var(--sbb-color-aluminium-default);
 }
 
 :host([variant='transparent']) {
@@ -302,7 +295,8 @@
           [data-active]
         )
     )
-    & {
+    &,
+  :host([variant='tertiary']:not([disabled]:not([disabled='false']), :active, [data-active])) & {
     &::before {
       box-shadow: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
           var(--sbb-button-shadow-2-offset-y) var(--sbb-button-shadow-2-blur)
