--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -15,6 +15,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   @include horizontal-orientation;
 }
 
+:host(:not([data-has-selection-panel])) {
+  --sbb-radio-button-group-width: max-content;
+}
+
 :host([orientation='vertical']) {
   --sbb-radio-button-group-orientation: column;
   --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-3x);
