--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -101,34 +101,27 @@
   --sbb-button-color-hover-text: var(--sbb-color-milk-default);
 }
 
-:host([variant='translucent']) {
-  --sbb-button-color-active-background: var(--sbb-color-black-alpha-70);
-  --sbb-button-color-active-border: var(--sbb-color-black-alpha-0);
+:host([variant='tertiary']) {
+  --sbb-button-color-active-background: var(--sbb-color-black-default);
+  --sbb-button-color-active-border: var(--sbb-color-cloud-default);
   --sbb-button-color-active-text: var(--sbb-color-cloud-default);
-  --sbb-button-color-default-background: var(--sbb-color-black-alpha-50);
-  --sbb-button-color-default-border: var(--sbb-color-black-alpha-0);
+  --sbb-button-color-default-background: var(--sbb-color-charcoal-default);
+  --sbb-button-color-default-border: var(--sbb-color-cloud-default);
   --sbb-button-color-default-text: var(--sbb-color-white-default);
-  --sbb-button-color-disabled-background: var(--sbb-color-black-alpha-20);
-  --sbb-button-color-disabled-border: var(--sbb-color-black-alpha-0);
-  --sbb-button-color-disabled-text: var(--sbb-color-milk-default);
-  --sbb-button-color-hover-background: var(--sbb-color-black-alpha-60);
-  --sbb-button-color-hover-border: var(--sbb-color-black-alpha-0);
+  --sbb-button-color-disabled-background: var(--sbb-color-milk-default);
+  --sbb-button-color-disabled-border: var(--sbb-color-milk-default);
+  --sbb-button-color-disabled-text: var(--sbb-color-platinum-default);
+  --sbb-button-color-hover-background: var(--sbb-color-midnight-default);
+  --sbb-button-color-hover-border: var(--sbb-color-cloud-default);
   --sbb-button-color-hover-text: var(--sbb-color-milk-default);
+  --sbb-button-shadow-1-color: var(--sbb-color-platinum-alpha-20);
+  --sbb-button-shadow-2-color: var(--sbb-color-cement-alpha-20);
 }
 
-:host([variant='translucent'][negative]:not([negative='false'])) {
-  --sbb-button-color-active-background: var(--sbb-color-white-alpha-70);
-  --sbb-button-color-active-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-active-text: var(--sbb-color-anthracite-default);
-  --sbb-button-color-default-background: var(--sbb-color-white-alpha-50);
-  --sbb-button-color-default-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-default-text: var(--sbb-color-charcoal-default);
-  --sbb-button-color-disabled-background: var(--sbb-color-white-alpha-20);
-  --sbb-button-color-disabled-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-disabled-text: var(--sbb-color-platinum-default);
-  --sbb-button-color-hover-background: var(--sbb-color-white-alpha-60);
-  --sbb-button-color-hover-border: var(--sbb-color-white-alpha-0);
-  --sbb-button-color-hover-text: var(--sbb-color-iron-default);
+:host([variant='tertiary'][negative]:not([negative='false'])) {
+  --sbb-button-color-disabled-background: var(--sbb-color-black-alpha-10);
+  --sbb-button-color-disabled-border: var(--sbb-color-black-alpha-0);
+  --sbb-button-color-disabled-text: var(--sbb-color-aluminium-default);
 }
 
 :host([variant='transparent']) {
@@ -175,6 +168,39 @@
   --icon-margin-inline-end: 0;
 }
 
+:host([disabled]:not([disabled='false'])) {
+  @include sbb.if-forced-colors {
+    --sbb-button-color-disabled-text: GrayText !important;
+  }
+}
+
+:host(:not([disabled]:not([disabled='false']), :active, [data-active]):hover) {
+  @include sbb.hover-mq($hover: true) {
+    --sbb-button-translate-y-content-hover: #{sbb.px-to-rem-build(-1)};
+    --sbb-button-shadow-1-offset-y: calc(
+      0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
+    );
+    --sbb-button-shadow-1-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-blur));
+    --sbb-button-shadow-2-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-2-blur));
+  }
+
+  @include sbb.if-forced-colors {
+    --sbb-button-color-hover-border: Highlight !important;
+  }
+}
+
+:host([role='button']) {
+  @include sbb.if-forced-colors {
+    --sbb-button-color-default-text: ButtonText !important;
+    --sbb-button-color-hover-text: ButtonText !important;
+    --sbb-button-color-active-text: ButtonText !important;
+    --sbb-button-color-default-background: Canvas !important;
+    --sbb-button-color-hover-background: Canvas !important;
+    --sbb-button-color-active-background: Canvas !important;
+    --sbb-button-color-disabled-background: Canvas !important;
+  }
+}
+
 .sbb-button {
   @include sbb.text-xs--bold;
   @include sbb.font-smoothing;
@@ -215,33 +241,63 @@
     transition-timing-function: var(--sbb-button-transition-easing-function);
     transition-property: inset, background-color, border-color, box-shadow;
 
+    :host([disabled]:not([disabled='false'])) & {
+      background-color: var(--sbb-button-color-disabled-background);
+      border-color: var(--sbb-button-color-disabled-border);
+    }
+
     // Hide focus outline when focus origin is mouse or touch. This is being used in tooltip as a workaround.
     :host(:focus-visible:not([data-focus-origin='mouse'], [data-focus-origin='touch'])) & {
       @include sbb.focus-outline;
     }
-  }
 
-  // If the the device can hover over elements with ease
-  @include sbb.hover-mq($hover: true) {
     :host(:not([disabled]:not([disabled='false']), :active, [data-active]):hover) & {
-      --sbb-button-translate-y-content-hover: #{sbb.px-to-rem-build(-1)};
-      --sbb-button-shadow-1-offset-y: calc(
-        0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
-      );
-      --sbb-button-shadow-1-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-blur));
-      --sbb-button-shadow-2-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-2-blur));
-
-      color: var(--sbb-button-color-hover-text);
-
-      &::before {
+      @include sbb.hover-mq($hover: true) {
         inset: calc(var(--sbb-button-border-width) * -1);
         background-color: var(--sbb-button-color-hover-background);
         border-color: var(--sbb-button-color-hover-border);
-
-        @include sbb.if-forced-colors {
-          border-color: Highlight;
-        }
       }
+    }
+
+    :host(:not([disabled]:not([disabled='false'])):is(:active, [data-active])) & {
+      color: var(--sbb-button-color-active-text);
+      background-color: var(--sbb-button-color-active-background);
+      border-color: var(--sbb-button-color-active-border);
+    }
+
+    // Only apply shadow definitions where it is really used.
+    :host(
+        :is([variant='primary'], [variant='secondary']:not([negative]), [variant='tertiary']):not(
+            [disabled]:not([disabled='false']),
+            :active,
+            [data-active]
+          )
+      )
+      & {
+      box-shadow: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
+          var(--sbb-button-shadow-2-offset-y) var(--sbb-button-shadow-2-blur)
+          var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-button-shadow-2-color),
+        var(--sbb-shadow-elevation-level-3-shadow-1-offset-x) var(--sbb-button-shadow-1-offset-y)
+          var(--sbb-button-shadow-1-blur) var(--sbb-shadow-elevation-level-3-shadow-1-spread)
+          var(--sbb-button-shadow-1-color);
+    }
+  }
+
+  &::after {
+    :host([disabled]:not([disabled='false'])) & {
+      @include sbb.absolute-center-y;
+
+      content: '';
+      background-color: var(--sbb-button-color-disabled-text);
+      height: var(--sbb-button-disabled-line-through-height);
+      inset-inline: var(--sbb-button-padding-inline);
+    }
+
+    :host([data-icon-only][disabled]:not([disabled='false'])) & {
+      inset-inline: unset;
+
+      // Width of line through is fixed in icon variant
+      width: var(--sbb-button-icon-size);
     }
   }
 
@@ -254,75 +310,12 @@
     color: var(--sbb-button-color-disabled-text);
     cursor: default;
     pointer-events: none;
-
-    &::before {
-      background-color: var(--sbb-button-color-disabled-background);
-      border-color: var(--sbb-button-color-disabled-border);
-    }
-
-    // Line through content
-    &::after {
-      content: '';
-      @include sbb.absolute-center-y;
-
-      background-color: var(--sbb-button-color-disabled-text);
-      height: var(--sbb-button-disabled-line-through-height);
-      inset-inline: var(--sbb-button-padding-inline);
-
-      @include sbb.if-forced-colors {
-        background-color: GrayText;
-      }
-    }
-
-    @include sbb.if-forced-colors {
-      color: GrayText;
-    }
   }
 
-  :host([data-icon-only][disabled]:not([disabled='false'])) &::after {
-    inset-inline: unset;
-
-    // Width of line through is fixed in icon variant
-    width: var(--sbb-button-icon-size);
-  }
-
-  :host(:not([disabled]:not([disabled='false'])):is(:active, [data-active])) &::before {
-    color: var(--sbb-button-color-active-text);
-    background-color: var(--sbb-button-color-active-background);
-    border-color: var(--sbb-button-color-active-border);
-  }
-
-  // Only apply shadow definitions where it is really used.
-  :host([variant='primary']:not([disabled]:not([disabled='false']), :active, [data-active])) &,
-  :host(
-      [variant='secondary']:not(
-          [negative]:not([negative='false']),
-          [disabled]:not([disabled='false']),
-          :active,
-          [data-active]
-        )
-    )
-    & {
-    &::before {
-      box-shadow: var(--sbb-shadow-elevation-level-3-shadow-2-offset-x)
-          var(--sbb-button-shadow-2-offset-y) var(--sbb-button-shadow-2-blur)
-          var(--sbb-shadow-elevation-level-3-shadow-2-spread) var(--sbb-button-shadow-2-color),
-        var(--sbb-shadow-elevation-level-3-shadow-1-offset-x) var(--sbb-button-shadow-1-offset-y)
-          var(--sbb-button-shadow-1-blur) var(--sbb-shadow-elevation-level-3-shadow-1-spread)
-          var(--sbb-button-shadow-1-color);
+  :host(:not([disabled]:not([disabled='false']), :active, [data-active]):hover) & {
+    @include sbb.hover-mq($hover: true) {
+      color: var(--sbb-button-color-hover-text);
     }
-  }
-}
-
-:host([role='button']) {
-  @include sbb.if-forced-colors {
-    --sbb-button-color-default-text: ButtonText !important;
-    --sbb-button-color-hover-text: ButtonText !important;
-    --sbb-button-color-active-text: ButtonText !important;
-    --sbb-button-color-default-background: Canvas !important;
-    --sbb-button-color-hover-background: Canvas !important;
-    --sbb-button-color-active-background: Canvas !important;
-    --sbb-button-color-disabled-background: Canvas !important;
   }
 }
 
