refactor: 00000 sbb-map-container implementation
- Added flag to show/hide button
- Moved button from slotted to a fix part of the component
- Added translations for button label
- Added interesction observer to global-helpers

--- a/src/components/sbb-map-container/sbb-map-container.scss
+++ b/src/components/sbb-map-container/sbb-map-container.scss
@@ -38,20 +38,19 @@
   transition: opacity var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
   opacity: 0;
 
+  :host([data-return-button-visible='true']) & {
+    opacity: 1;
+  }
+
   @include sbb.mq($from: medium) {
     display: none;
-  }
-}
-
-:host([data-return-button-visible='true']) {
-  .sbb-map-container__sidebar-button {
-    opacity: 1;
   }
 }
 
 .sbb-map-container__sidebar {
   @include sbb.scrollbar-light;
 
+  scroll-behavior: smooth;
   grid-column: 1 / 3;
   grid-row: 2 / 3;
   width: 100%;
