--- a/src/components/sbb-map-container/sbb-map-container.scss
+++ b/src/components/sbb-map-container/sbb-map-container.scss
@@ -40,22 +40,25 @@
 .sbb-map-container__sidebar-button {
   position: fixed;
   left: 50%;
-  transform: translateX(-50%);
   inset-block-end: var(--sbb-spacing-fixed-5x);
-  opacity: 0;
   visibility: hidden;
+  opacity: 0;
+  transform: translateX(-50%) translateY(calc(100% + var(--sbb-spacing-fixed-5x)));
 
   // Hide transition, visibility should be delayed
   transition: opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
     visibility var(--sbb-map-container-animation-duration) var(--sbb-animation-easing)
-      var(--sbb-map-container-animation-duration);
+      var(--sbb-map-container-animation-duration),
+    transform var(--sbb-map-container-animation-duration) var(--sbb-animation-easing);
 
   :host([data-scroll-up-button-visible]) & {
     // Show transition
-    transition: visibility,
-      opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing);
+    transition: visibility var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
+      opacity var(--sbb-map-container-animation-duration) var(--sbb-animation-easing),
+      transform var(--sbb-map-container-animation-duration) ease-out;
     visibility: visible;
     opacity: 1;
+    transform: translateX(-50%) translateY(0);
   }
 
   @include sbb.mq($from: medium) {
